--- a/JSP_datasource/WebContent/WEB-INF/web.xml
+++ b/JSP_datasource/WebContent/WEB-INF/web.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-  <display-name>JSP_datasource</display-name>
-
 	<servlet>
-		<servlet-name>memberListServlet</servlet-name>
+		<servlet-name>MemberListServlet</servlet-name>
 		<servlet-class>com.jsp.controller.MemberListServlet</servlet-class>
+		<init-param>
+			<param-name>sqlSessionFactory</param-name>
+			<param-value>com.jsp.datasource.OracleMybatisSqlSessionFactory</param-value>
+		</init-param>
+		<init-param>
+			<param-name>memberDAO</param-name>
+			<param-value>com.jsp.dao.MemberDAOImpl</param-value>
+		</init-param>
+		<init-param>
+			<param-name>memberService</param-name>
+			<param-value>com.jsp.service.MemberServiceImpl</param-value>
+		</init-param>
+		
+		
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>memberListServlet</servlet-name>
+		<servlet-name>MemberListServlet</servlet-name>
 		<url-pattern>/member/list</url-pattern>
 	</servlet-mapping>
 
