--- a/JSP_command_bootstrap/WebContent/WEB-INF/web.xml
+++ b/JSP_command_bootstrap/WebContent/WEB-INF/web.xml
@@ -12,6 +12,20 @@
 	</listener>
 
 
+
+	<filter>
+		<filter-name>Set Character Encoding</filter-name>
+		<filter-class>org.apache.catalina.filters.SetCharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>utf-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>Set Character Encoding</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<filter>
 		<filter-name>sitemesh</filter-name>
 		<filter-class>com.opensymphony.sitemesh.webapp.SiteMeshFilter</filter-class>
@@ -20,6 +34,20 @@
 		<filter-name>sitemesh</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<filter>
+		<filter-name>loginCheckFilter</filter-name>
+		<filter-class>com.jsp.filter.LoginCheckFilter</filter-class>
+		<init-param>
+			<param-name>exclude</param-name>
+			<param-value>login,logout</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>loginCheckFilter</filter-name>
+		<url-pattern>*.do</url-pattern>
+	</filter-mapping>
+	
 	
 	
 	<servlet>
