security End, scheduler start

--- a/spring_bootstrap/src/main/webapp/WEB-INF/web.xml
+++ b/spring_bootstrap/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,29 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
+	<!-- sessionExpiredCheck -->
+	<filter>
+		<filter-name>sessionExpiredCheckFilter</filter-name>
+		<filter-class>kr.or.ddit.filter.SessionExpiredCheckFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>sessionExpiredCheckFilter</filter-name>
+		<url-pattern>/common/loginExpired</url-pattern>
+	</filter-mapping>
+	
+	<!-- Security -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+
+	
+	
 	<!-- sitemesh -->
 	<filter>
 		<filter-name>sitemesh</filter-name>
@@ -38,23 +61,20 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+
 	<!-- loginCheck -->
-	<filter>
-		<filter-name>loginCheckFilter</filter-name>
-		<filter-class>com.jsp.filter.LoginCheckFilter</filter-class>
-		<init-param>
-			<param-name>exclude</param-name>
-			<param-value>login,logout</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>loginCheckFilter</filter-name>
-		<url-pattern>*.do</url-pattern>
-	</filter-mapping>
-
-
-
-
+<!-- 	<filter> -->
+<!-- 		<filter-name>loginCheckFilter</filter-name> -->
+<!-- 		<filter-class>com.jsp.filter.LoginCheckFilter</filter-class> -->
+<!-- 		<init-param> -->
+<!-- 			<param-name>exclude</param-name> -->
+<!-- 			<param-value>login,logout</param-value> -->
+<!-- 		</init-param> -->
+<!-- 	</filter> -->
+<!-- 	<filter-mapping> -->
+<!-- 		<filter-name>loginCheckFilter</filter-name> -->
+<!-- 		<url-pattern>*.do</url-pattern> -->
+<!-- 	</filter-mapping> -->
 
 
 	<!-- Processes application requests -->
