--- a/spring_bootstrap/pom.xml
+++ b/spring_bootstrap/pom.xml
@@ -28,6 +28,7 @@
 		<jackson.databind-version>2.9.8</jackson.databind-version>
 		<aspectjweaver-version>1.9.6</aspectjweaver-version>
 		<commons.fileupload-version>1.3.1</commons.fileupload-version>
+		<org.apache.tiles-version>3.0.8</org.apache.tiles-version>
 		
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
@@ -147,6 +148,13 @@
 		    <version>${commons.fileupload-version}</version>
 		</dependency>
 		
+		<!-- tiles-extras -->
+		<dependency>
+		    <groupId>org.apache.tiles</groupId>
+		    <artifactId>tiles-extras</artifactId>
+		    <version>${org.apache.tiles-version}</version>
+		</dependency>
+		
 		<!-- AspectJ -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -215,18 +223,21 @@
 		</dependency>
 				
 		<!-- Servlet -->
+		<!-- javax.servlet-api -->
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>3.0.1</version>
+		    <scope>provided</scope>
 		</dependency>
+		<!-- javax.servlet.jsp-api -->
 		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
-			<version>2.1</version>
-			<scope>provided</scope>
+		    <groupId>javax.servlet.jsp</groupId>
+		    <artifactId>javax.servlet.jsp-api</artifactId>
+		    <version>2.3.1</version>
+		    <scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
